# geist_fabrik

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AMBITIOUS_GEISTS.md  ARCHITECTURE.md  BUG_REPORT_TRACERY_GEISTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LESSONS_LEARNED.md  LICENSE  MODIFIER_IMPROVEMENTS.md  README.md  README_EARLY_ADOPTERS.md  STATUS.md  TESTING_SUMMARY.md  TEST_RESULTS.md  TODO.md  claude_uv.sh  current_tasks.md  pyproject.toml  pytest.ini  uv-best-practices-guide.md
.github/workflows/: test.yml
benchmarks/: RESULTS_2026-06.md  issue78_replica.py  perf_before_after.py  session_benchmark.py
docs/: 10K_VAULT_BENCHMARK.md  ARCHITECTURE.md  BENCHMARKING_GUIDE.md  BENCHMARK_COMPARISON_2025_11_14.md  BENCHMARK_RESULTS_PHASE3.md  BLOCKED_GEISTS.md  CANDIDATE_GEISTS.md  CI_OPTIMIZATION.md  CI_STRATEGY_ANALYSIS.md  CI_VALIDATION_GUIDE.md  CLUSTER_NAMING_EXAMPLES.md  CLUSTER_NAMING_IMPLEMENTATION.md  CLUSTER_NAMING_OPPORTUNITIES.md  CONFIGURATION.md  CREATION_BURST_GEIST_SPEC.md  CREATION_BURST_PHASE2_EXAMPLE.py  CREATION_BURST_QUALITY_REVIEW.md  DEEP_AUDIT_REPORT.md  EMBEDDING_CACHE_AUDIT.md  EXTENSION_POINTS.md  GEIST_CATALOG.md  GEIST_IMPLEMENTATION_BEST_PRACTICES.md  GEIST_INSTRUMENTATION_DESIGN.md  GEIST_TYPOLOGY.md  GeistFabrik2.0_Wishlist.md  JOURNAL_FILES.md  LESSONS_LEARNED.md  LIST_VS_ITERATOR_ANALYSIS.md  LYT_KIT_BENCHMARK.md  OVERSIGHT_FIXES.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_2025_10_31.md  PERFORMANCE_ANALYSIS_JETBRAINS.md  PERFORMANCE_BENCHMARK.md  PERFORMANCE_COMPARISON_2025_10_31.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PHASE1_OPTIMIZATION_RESULTS.md  PHASE2_TESTS.md  POST_MORTEM_PHASE3B.md  POST_MORTEM_PR30.md  (+20 more)
docs/audits/: ARCHITECTURE_ANALYSIS.md  CODEBASE_AUDIT.md  CODEBASE_AUDIT_TECHNICAL.md  CODE_QUALITY_ASSESSMENT.md  DEEP_AUDIT_2026_03_14.md  DEEP_AUDIT_2026_03_14_v2.md  GEIST_AUDIT.md  TECHNICAL_DEBT_AUDIT.md  TECHNICAL_DEBT_DEEP_DIVE.md  TEST_AUDIT.md
docs/research/: TRACERY_FEATURE_COMPARISON.md
examples/: README.md
examples/metadata_inference/: complexity.py  structure.py  temporal.py
examples/vault_functions/: contrarian.py  questions.py
models/: README.md
models/all-MiniLM-L6-v2/: README.md  config_sentence_transformers.json
scripts/: BENCHMARKS.md  README.md  analyze_benchmarks.py  benchmark_backends.py  benchmark_cluster_labeling.py  benchmark_config.py  benchmark_optimizations.py  check_phase_completion.py  ci_local.sh  compare_cluster_labeling.py  detect_unused_tables.py  download_model.py  fix_redundant_vault_notes.py  profile_congruence_mirror.py  profile_geists.py  setup-dev.sh  test_without_models.sh  validate.sh  validate_web.sh
specs/: CIRCULAR_DEPENDENCIES_ANALYSIS.md  CLUSTER_MIRROR_GEIST_SPEC.md  CLUSTER_NAMING.md  CLUSTER_NAMING_EXAMPLES.md  CONGRUENCE_MIRROR_GEIST_SPEC.md  CREATION_BURST_GEIST_SPEC.md  DATE_COLLECTION_NOTES_SPEC.md  EMBEDDINGS_SPEC.md  HARVESTER_FAMILY_SPEC.md  JOURNAL_FILES.md  Journals_spec.md  MODIFIER_IMPROVEMENTS.md  QUESTION_HARVESTER_GEIST_SPEC.md  SEMANTIC_GAP_GEIST_SPEC.md  SPEC_STATUS.md  STATS_COMMAND_SPEC.md  VAULT_HELPER_FUNCTIONS_DESIGN.md  VECTOR_SEARCH_BACKENDS_SPEC.md  VIRTUAL_NOTES_ARCHITECTURE.md  acceptance_criteria.md  default_geists_spec.md  geist_validation_spec.md  geistfabrik_file_structure.md  geistfabrik_spec.md  geistfabrik_vision.md  implementation_phases.md  performance_optimization_spec.md  phase_3_optimisation_plan.md  python_audit_heuristics.md  reflective_lenses_spec.md  reuse_abstractions_spec.md  sentiment_geists_spec.md  testing_plan.md  tracery_research.md  tracery_vault_function_spec.md  version_0.9.1_plan.md
specs/research/: CLUSTER_NAMING_RESEARCH.md  EMOTION_REGULATION_CREATIVITY_RESEARCH.md  EXTENDED_MIND_RESEARCH.md  GEIST_PATTERN_TAXONOMY.md  MISSING_MULTIDIMENSIONAL_GEISTS.md  MULTIDIMENSIONAL_MOVEMENT_ANALYSIS.md  POST_MORTEM_PHASE3B.md  SENTIMENT_ANALYSIS_RESEARCH.md  SUBCONSCIOUS_GEIST_COMPARISON.md  TEMPORAL_EMBEDDINGS_RESEARCH.md  TEMPORAL_GEISTS_RESEARCH.md  TRACERY_FEATURE_COMPARISON.md
src/geistfabrik/: __init__.py  cli.py  cluster_labeling.py  clustering_analysis.py  config.py  config_loader.py  content_extraction.py  date_collection.py  embedding_metrics.py  embeddings.py  filtering.py  function_registry.py  geist_executor.py  geist_status.py  graph_analysis.py  journal_writer.py  markdown_parser.py  metadata_system.py  models.py  schema.py  similarity_analysis.py  stats.py  stats_formatter.py  temporal_analysis.py  tracery.py  validator.py  vault.py  vault_context.py  vector_search.py  voice_analysis.py
testdata/example_geists/: old_notes.py  orphans.py  semantic_neighbors.py  semantic_neighbours.py  unlinked_pairs.py
testdata/kepano-obsidian-main/: 2023 Japan Trip.md  2023-09-12 Meeting with Steph.md  Evergreen notes turn ideas into objects that you can manipulate.md  Isolated thought.md  Minimal Theme.md  Obsidian.md  Product usage analysis.md  Readme.md
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  helpers.py  virtual_notes.py
tests/integration/: VIRTUAL_NOTES_REGRESSION_README.md  __init__.py  conftest.py  test_cluster_labeling_integration.py  test_date_collection_edge_cases.py  test_date_collection_integration.py  test_embeddings_integration.py  test_example_geists.py  test_kepano_vault.py  test_phase3b_regression.py  test_scenarios.py  test_vault.py  test_virtual_notes_regression.py
tests/unit/: GEIST_TESTING_TEMPLATE.md  __init__.py  conftest.py  test_algorithmic_fixes.py  test_anachronism_detector.py  test_antithesis_generator.py  test_assumption_challenger.py  test_blind_spot_detector.py  test_bridge_builder.py  test_bridge_hunter.py  test_builtin_metadata.py  test_burst_evolution.py  test_claim_hypothesis_harvesters.py  test_cli.py  test_cluster_label_persistence.py  test_cluster_labeling.py  test_cluster_mirror.py  test_cluster_performance.py  test_code_geists_empty_data.py  test_columbo.py  test_complexity_mismatch.py  test_concept_cluster.py  test_concept_drift.py  test_config_plumbing.py  test_content_extraction.py  (+71 more)
(+153 files in other folders)
