[project]
name = "geistfabrik"
version = "0.9.0"
description = "A Python-based divergence engine for Obsidian vaults"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ade", email = "ade@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
vector-search = [
    "sqlite-vec>=0.1.0",
]
stats = [
    "scikit-learn>=1.3.0",      # For clustering and metrics
    "scikit-dimension>=0.3.0",  # For intrinsic dimensionality
    "vendi-score>=0.0.1",       # For diversity metrics
]

[project.scripts]
geistfabrik = "geistfabrik.cli:main"
gf = "geistfabrik.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that require network access (model downloads)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"examples/geists/code/*.py" = ["E501"]  # Allow long lines in geist suggestion text

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "types-pyyaml>=6.0",
]
