[project]
name = "geistfabrik"
version = "0.9.0"
description = "A Python-based divergence engine for Obsidian vaults"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ade", email = "ade@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
vector-search = [
    "sqlite-vec>=0.1.0",
]
stats = [
    "scikit-learn>=1.3.0",      # For clustering and metrics
    "scikit-dimension>=0.3.0",  # For intrinsic dimensionality
    "vendi-score>=0.0.1",       # For diversity metrics
]

[project.scripts]
geistfabrik = "geistfabrik.cli:main"
gf = "geistfabrik.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=geistfabrik --cov-branch --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that require network access (model downloads)",
    "benchmark: Performance benchmark tests (not run by default)",
]

[tool.coverage.run]
branch = true
source = ["geistfabrik"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
# Note: fail_under is commented out to avoid breaking CI
# Run `pytest --cov-fail-under=80` to enforce thresholds
# fail_under = 80
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"examples/geists/code/*.py" = ["E501"]  # Allow long lines in geist suggestion text

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "types-pyyaml>=6.0",
]
